--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,372 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <link rel="stylesheet" href="styles/styles.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@200;400;700&family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container header__container">
+        <a href="#" class="header-top__logo">
+          <svg width="117"
+               height="27"
+               viewBox="0 0 117 27"
+               fill="none"
+               xmlns="http://www.w3.org/2000/svg">
+            <path d="M18.96 0.799998V20.744L4.668 0.799998H0.24V26H3.84V5.516L18.6 26H22.56V0.799998H18.96ZM48.977 0.799998V5.588C46.889 2.672 43.649 0.583999 39.941 0.583999C32.669 0.583999 27.413 5.984 27.413 13.4C27.413 20.816 32.669 26.216 39.941 26.216C43.649 26.216 46.889 24.128 48.977 21.212V26H52.469V0.799998H48.977ZM40.085 22.904C34.937 22.904 31.193 18.908 31.193 13.4C31.193 7.892 34.937 3.896 40.085 3.896C45.233 3.896 48.977 7.892 48.977 13.4C48.977 18.908 45.233 22.904 40.085 22.904ZM88.8309 0.799998H83.6829L73.9629 21.752L64.2069 0.799998H58.9509V26H62.5509V5.48L72.0549 26H75.6549L85.2309 5.3V26H88.8309V0.799998ZM105.923 26.36C112.187 26.36 116.903 21.788 116.903 15.704V0.799998H113.303V15.704C113.303 19.808 110.135 22.904 105.923 22.904C101.711 22.904 98.5425 19.808 98.5425 15.704V0.799998H94.9425V15.704C94.9425 21.788 99.6585 26.36 105.923 26.36Z" fill="#F1F5F4">
+          </svg>
+        </a>
+        <div class="header-top__toggle">
+          - - -  UA
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="main">
+        <div class="container main__container">
+          <span class="main__text text-main">10 серпня - 10 листопада</span>
+          <h2 class="main__title text-title text-title--big">Мистецтво</h2>
+          <div class="main__text-block">
+            <h2 class="main__title text-title text-title--big">XIX - XX ст.</h2>
+            <span class="main__descr text-main">Внесок українських митців у світову <br> культуру 19-20 ст.</span>
+            <a class="button" href="#">Купити квиток</a>
+          </div>
+          <span class="main__date">10.08 - 10.10</span>
+          <span class="main__img-descr text-main">Дівчина з Поділля <br>В. Тропінін</span>
+        </div>
+      </section>
+
+      <section class="exhibition">
+        <div class="container exhibition__container">
+          <h3 class="exhibition__header text-title">Актуальні виставки</h3>
+          <img class="exhibition__img exhibition__img--first"
+
+               src="./images/exhibition-1.png"
+
+               alt="">
+          <div class="exhibition__block">
+            <div class="exhibition__col">
+              <div class="decoration"></div>
+            </div>
+            <div class="exhibition__col">
+              <div class="info-block info-block--exhibition">
+                <div class="info-block__note info-block__note--exception text-main text-main--red">
+                  11.07 - 22.09
+                </div>
+                <div class="info-block__title text-title text-title--small">
+                  Кураторська виставка “Ангели”
+                </div>
+                <div class="info-block__description text-description">
+                  Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...
+                </div>
+                <a href="#" class="button">Купити квиток</a>
+              </div>
+            </div>
+          </div>
+          <img class="exhibition__img exhibition__img--second"
+               src="./images/exhibition-2.png"
+               alt="">
+          <div class="exhibition__block">
+            <div class="exhibition__col">
+              <div class="info-block info-block--exhibition info-block--middle">
+                <div class="info-block__note text-main text-main--red">
+                  Діє постійно
+                </div>
+                <div class="info-block__title text-title text-title--small">
+                  Мистецтво ХХ ст. — XXI ст.
+                </div>
+                <div class="info-block__description text-description">
+                  Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.
+                </div>
+                <a href="#" class="button">Купити квиток</a>
+              </div>
+            </div>
+            <div class="exhibition__col">
+              <div class="decoration">
+                <div class="decoration__text"></div>
+              </div>
+            </div>
+          </div>
+          <div class="exhibition__block">
+            <div class="exhibition__col">
+              <div class="decoration">
+                <div class="decoration__text decoration__text--second"></div>
+                <img class="exhibition__img exhibition__img--third"
+                     src="./images/exhibition-3.png"
+                     alt="">
+              </div>
+            </div>
+            <div class="exhibition__col">
+              <div class="info-block info-block--exhibition">
+                <div class="info-block__note text-main text-main--red">
+                  Діє постійно
+                </div>
+                <div class="info-block__title text-title text-title--small">
+                  Стародавнє мистецтво
+                </div>
+                <div class="info-block__description text-description">
+                  Визначні приклади стародавнього українського іконопису та живопису
+                </div>
+                <a href="#" class="button">Купити квиток</a>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="section-button">Архів виставок</a>
+        </div>
+      </section>
+
+      <section class="events">
+        <div class="container events__container">
+          <h3 class="events__header text-title">Найближчі події</h3>
+          <div class="events__item">
+            <div class="events__wrapper">
+              <div class="events__datetime">
+                <div class="events__date">14.08</div>
+                <div class="events__time">13:00</div>
+              </div>
+              <div class="info-block info-block--events">
+                <div class="info-block__note text-main text-main--events">
+                  Екскурсія
+                </div>
+                <div class="info-block__title text-title text-title--small">
+                  Кураторські екскурсії від Павла Гудімова
+                </div>
+                <div class="info-block__description text-description">
+                  Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...
+                </div>
+                <a href="#" class="button">Зареєструватись</a>
+              </div>
+            </div>
+            <img class="events__image"
+                 src="./images/events-1.jpg"
+                 alt="">
+          </div>
+          <div class="events__item">
+            <img class="events__image"
+                 src="./images/events-2.jpg"
+                 alt="">
+            <div class="events__wrapper">
+              <div class="events__datetime">
+                <div class="events__date">18.08</div>
+                <div class="events__time">14:00</div>
+              </div>
+              <div class="info-block info-block--events">
+                <div class="info-block__note text-main text-main--events">
+                  Майстер-клас
+                </div>
+                <div class="info-block__title text-title text-title--small">
+                  Подорож до Австралії
+                </div>
+                <div class="info-block__description text-description">
+                  Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.
+                </div>
+                <a href="#" class="button">Зареєструватись</a>
+              </div>
+
+            </div>
+          </div>
+          <a href="#" class="section-button">Календар подій</a>
+        </div>
+      </section>
+
+      <section class="visit">
+        <div class="container visit__container">
+          <div class="visit__image"></div>
+          <h2 class="visit__title text-title text-title--big">Сплануйте візит до музею</h2>
+          <div class="visit__info">
+            <p class="visit__description text-main">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
+            <a href="#" class="button">Почати</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="news">
+        <div class="container news__container">
+          <h3 class="news__header text-title">Новини</h3>
+          <div class="news__items">
+            <div class="news__item">
+              <img src="./images/news-1.jpg"
+                   alt=""
+                   class="news__image">
+              <div class="info-block">
+                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
+                <div class="info-block__title text-title text-title--smaller">Оголошення переможця</div>
+                <div class="info-block__description text-main text-main--gray">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</div>
+              </div>
+            </div>
+            <div class="news__item">
+              <img src="./images/news-2.jpg"
+                   alt=""
+                   class="news__image">
+              <div class="info-block">
+                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
+                <div class="info-block__title text-title text-title--smaller">Міжнародний день котів</div>
+                <div class="info-block__description text-main text-main--gray">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</div>
+              </div>
+            </div>
+            <div class="news__item">
+              <img src="./images/news-3.jpg"
+                   alt=""
+                   class="news__image">
+              <div class="info-block">
+                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
+                <div class="info-block__title text-title text-title--smaller">200 років П. Кулішу</div>
+                <div class="info-block__description text-main text-main--gray">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</div>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="section-button">Усі новини</a>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="container subscribe__container">
+          <h3 class="text-title subscribe__header">Підпишіться на дайджест</h3>
+          <div class="subscribe__block">
+            <p class="subscribe__info text-main">Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів</p>
+            <input class="subscribe__input"
+                   type="email"
+                   placeholder="e-mail">
+          </div>
+        </div>
+      </section>
+
+    </main>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__row">
+          <div class="footer__col">
+            <h4 class="footer__title text-title text-title--small">Контакти</h4>
+            <ul class="footer__list">
+              <li class="footer__item text-main">
+                <p>Київ, <br> вул. М. Грушевського, 6</p>
+              </li>
+              <li class="footer__item text-main">
+                тел. <a class="footer__link" href="#">278-13-57</a>, <br>
+                <a class="footer__link" href="#">278-74-54</a> <br>
+                <a class="footer__link" href="#">info@namu.kiev.ua</a>
+              </li>
+            </ul>
+            <ul class="footer__media">
+              <li>
+                <a href="#">
+                  <svg width="10"
+                       height="20"
+                       viewBox="0 0 10 20"
+                       fill="none"
+                       xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.90909 10.9434V20H6.54545V10.9434H9.27273L10 7.16981H6.54545V4.5283C6.54545 3.96226 7.09091 3.39623 7.63636 3.39623H10V0H5.81818C4.90909 0 2.90909 1.32075 2.90909 3.39623V7.16981H0V10.9434H2.90909Z" fill="#C4C4C4">
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg width="20"
+                       height="16"
+                       viewBox="0 0 20 16"
+                       fill="none"
+                       xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.78947 13.9669C2.94737 14.4548 0.912281 14.4412 0 14.3734C0.421053 14.78 3.57895 16 6.52632 16C9.47368 16 11.5789 15.5934 15.1579 12.3408C18.0211 9.73865 18.3158 5.971 18.1053 4.41244L20 2.37953H18.3158L19.3684 0.346626C18.5965 0.820951 17.0105 1.64763 16.8421 1.15973C16.6316 0.549857 13.6842 -0.873177 11.1579 0.753142C9.13684 2.0542 9.47368 3.80257 9.68421 5.22553C5.89474 4.81902 1.05263 0.753142 1.05263 0.753142C-0.122503 2.86053 1.46337 5.41233 2.09911 6.43529L2.10526 6.4452L0.631579 6.03862C0.631579 7.82757 2.31579 9.08812 3.15789 9.69776H1.89474C2.56842 11.4867 4.70175 12.4761 5.68421 12.7471C5.40351 12.9504 4.63158 13.479 3.78947 13.9669Z" fill="#C4C4C4">
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg width="22"
+                       height="20"
+                       viewBox="0 0 22 20"
+                       fill="none"
+                       xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M8.39175 18.4122L12.0206 15.2369L18.1443 19.9998L22 0.948242L0 9.11319L6.12371 11.8348L8.39175 18.4122ZM8.84533 16.5978V12.9689L18.1443 4.80396L6.80409 11.3813L8.84533 17.0514V16.5978Z" fill="#C4C4C4">
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg width="17"
+                       height="17"
+                       viewBox="0 0 17 17"
+                       fill="none"
+                       xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M0 13.2442V2.56977C0 1.38372 1.38372 0 2.76744 0H14.2326C15.814 0 17 1.5814 17 3.36047V14.0349C17 15.2209 16.0116 17 13.8372 17H3.95349C1.77907 17 0 15.4186 0 13.2442ZM8.50003 5.54189C6.8663 5.54189 5.54189 6.8663 5.54189 8.50003C5.54189 10.1338 6.8663 11.4582 8.50003 11.4582C10.1338 11.4582 11.4582 10.1338 11.4582 8.50003C11.4582 6.8663 10.1338 5.54189 8.50003 5.54189ZM4.34189 8.50003C4.34189 6.20356 6.20356 4.34189 8.50003 4.34189C10.7965 4.34189 12.6582 6.20356 12.6582 8.50003C12.6582 10.7965 10.7965 12.6582 8.50003 12.6582C6.20356 12.6582 4.34189 10.7965 4.34189 8.50003ZM13.0466 4.5465C13.5924 4.5465 14.035 4.10399 14.035 3.55813C14.035 3.01226 13.5924 2.56976 13.0466 2.56976C12.5007 2.56976 12.0582 3.01226 12.0582 3.55813C12.0582 4.10399 12.5007 4.5465 13.0466 4.5465Z" fill="#C4C4C4">
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h4 class="footer__title text-title text-title--small">Розклад роботи</h4>
+            <ul class="footer__list">
+              <li class="footer__item footer__day text-main">
+                пн<span class="footer__time">вихідний</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                вт<span class="footer__time">вихідний</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                ср<span class="footer__time">10:00 - 17:00</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                чт<span class="footer__time">10:00 - 17:00</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                пт<span class="footer__time">10:00 - 19:00</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                сб<span class="footer__time">10:00 - 18:00</span>
+              </li>
+              <li class="footer__item footer__day text-main">
+                нд<span class="footer__time">10:00 - 17:00</span>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h4 class="footer__title text-title text-title--small">Членські програми</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="#">Зробити разовий внесок</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Індивідуальна</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Корпоративна</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <h4 class="footer__title text-title text-title--small">Про нас</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a class="footer__link" href="#">Історія</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Обличчя музею</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Вакансії</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Новини</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__base-info">
+          <span>© 2010 — 2021</span>
+          <a class="footer__link" href="#">Privacy — Terms</a>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
