--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMU</title>
+    <title>Національний художній музей України</title>
     <link rel="stylesheet" href="styles/styles.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@200;400;700&family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon"
+          sizes="180x180"
+          href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon"
+          type="image/png"
+          sizes="32x32"
+          href="./images/favicon/favicon-32x32.png">
+    <link rel="icon"
+          type="image/png"
+          sizes="16x16"
+          href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
+    <link rel="mask-icon"
+          href="./images/favicon/safari-pinned-tab.svg"
+          color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header class="header">
