--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,7 @@
     <header class="header">
       <div class="container header__container">
         <a href="#" class="header-top__logo">
-          <svg width="117"
-               height="27"
-               viewBox="0 0 117 27"
-               fill="none"
-               xmlns="http://www.w3.org/2000/svg">
-            <path d="M18.96 0.799998V20.744L4.668 0.799998H0.24V26H3.84V5.516L18.6 26H22.56V0.799998H18.96ZM48.977 0.799998V5.588C46.889 2.672 43.649 0.583999 39.941 0.583999C32.669 0.583999 27.413 5.984 27.413 13.4C27.413 20.816 32.669 26.216 39.941 26.216C43.649 26.216 46.889 24.128 48.977 21.212V26H52.469V0.799998H48.977ZM40.085 22.904C34.937 22.904 31.193 18.908 31.193 13.4C31.193 7.892 34.937 3.896 40.085 3.896C45.233 3.896 48.977 7.892 48.977 13.4C48.977 18.908 45.233 22.904 40.085 22.904ZM88.8309 0.799998H83.6829L73.9629 21.752L64.2069 0.799998H58.9509V26H62.5509V5.48L72.0549 26H75.6549L85.2309 5.3V26H88.8309V0.799998ZM105.923 26.36C112.187 26.36 116.903 21.788 116.903 15.704V0.799998H113.303V15.704C113.303 19.808 110.135 22.904 105.923 22.904C101.711 22.904 98.5425 19.808 98.5425 15.704V0.799998H94.9425V15.704C94.9425 21.788 99.6585 26.36 105.923 26.36Z" fill="#F1F5F4">
-          </svg>
+          <img src="./images/svg/logo.svg" alt="logo link image">
         </a>
         <div class="header-top__toggle">
           - - -  UA
@@ -62,9 +56,7 @@
         <div class="container exhibition__container">
           <h3 class="exhibition__header text-title">Актуальні виставки</h3>
           <img class="exhibition__img exhibition__img--first"
-
-               src="./images/exhibition-1.png"
-
+               src="images/content/exhibition-1.png"
                alt="">
           <div class="exhibition__block">
             <div class="exhibition__col">
@@ -86,7 +78,7 @@
             </div>
           </div>
           <img class="exhibition__img exhibition__img--second"
-               src="./images/exhibition-2.png"
+               src="images/content/exhibition-2.png"
                alt="">
           <div class="exhibition__block">
             <div class="exhibition__col">
@@ -114,7 +106,7 @@
               <div class="decoration">
                 <div class="decoration__text decoration__text--second"></div>
                 <img class="exhibition__img exhibition__img--third"
-                     src="./images/exhibition-3.png"
+                     src="images/content/exhibition-3.png"
                      alt="">
               </div>
             </div>
@@ -160,12 +152,12 @@
               </div>
             </div>
             <img class="events__image"
-                 src="./images/events-1.jpg"
+                 src="images/content/events-1.jpg"
                  alt="">
           </div>
           <div class="events__item">
             <img class="events__image"
-                 src="./images/events-2.jpg"
+                 src="images/content/events-2.jpg"
                  alt="">
             <div class="events__wrapper">
               <div class="events__datetime">
@@ -207,7 +199,7 @@
           <h3 class="news__header text-title">Новини</h3>
           <div class="news__items">
             <div class="news__item">
-              <img src="./images/news-1.jpg"
+              <img src="images/content/news-1.jpg"
                    alt=""
                    class="news__image">
               <div class="info-block">
@@ -217,7 +209,7 @@
               </div>
             </div>
             <div class="news__item">
-              <img src="./images/news-2.jpg"
+              <img src="images/content/news-2.jpg"
                    alt=""
                    class="news__image">
               <div class="info-block">
@@ -227,7 +219,7 @@
               </div>
             </div>
             <div class="news__item">
-              <img src="./images/news-3.jpg"
+              <img src="images/content/news-3.jpg"
                    alt=""
                    class="news__image">
               <div class="info-block">
@@ -272,50 +264,22 @@
             <ul class="footer__media">
               <li>
                 <a href="#">
-                  <svg width="10"
-                       height="20"
-                       viewBox="0 0 10 20"
-                       fill="none"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <path d="M2.90909 10.9434V20H6.54545V10.9434H9.27273L10 7.16981H6.54545V4.5283C6.54545 3.96226 7.09091 3.39623 7.63636 3.39623H10V0H5.81818C4.90909 0 2.90909 1.32075 2.90909 3.39623V7.16981H0V10.9434H2.90909Z" fill="#C4C4C4">
-                  </svg>
+                  <img src="./images/svg/facebook.svg" alt="facebook link icon">
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <svg width="20"
-                       height="16"
-                       viewBox="0 0 20 16"
-                       fill="none"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3.78947 13.9669C2.94737 14.4548 0.912281 14.4412 0 14.3734C0.421053 14.78 3.57895 16 6.52632 16C9.47368 16 11.5789 15.5934 15.1579 12.3408C18.0211 9.73865 18.3158 5.971 18.1053 4.41244L20 2.37953H18.3158L19.3684 0.346626C18.5965 0.820951 17.0105 1.64763 16.8421 1.15973C16.6316 0.549857 13.6842 -0.873177 11.1579 0.753142C9.13684 2.0542 9.47368 3.80257 9.68421 5.22553C5.89474 4.81902 1.05263 0.753142 1.05263 0.753142C-0.122503 2.86053 1.46337 5.41233 2.09911 6.43529L2.10526 6.4452L0.631579 6.03862C0.631579 7.82757 2.31579 9.08812 3.15789 9.69776H1.89474C2.56842 11.4867 4.70175 12.4761 5.68421 12.7471C5.40351 12.9504 4.63158 13.479 3.78947 13.9669Z" fill="#C4C4C4">
-                  </svg>
+                  <img src="./images/svg/twitter.svg" alt="twitter link icon">
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <svg width="22"
-                       height="20"
-                       viewBox="0 0 22 20"
-                       fill="none"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M8.39175 18.4122L12.0206 15.2369L18.1443 19.9998L22 0.948242L0 9.11319L6.12371 11.8348L8.39175 18.4122ZM8.84533 16.5978V12.9689L18.1443 4.80396L6.80409 11.3813L8.84533 17.0514V16.5978Z" fill="#C4C4C4">
-                  </svg>
+                  <img src="./images/svg/telegram.svg" alt="telegram link icon">
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <svg width="17"
-                       height="17"
-                       viewBox="0 0 17 17"
-                       fill="none"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          clip-rule="evenodd"
-                          d="M0 13.2442V2.56977C0 1.38372 1.38372 0 2.76744 0H14.2326C15.814 0 17 1.5814 17 3.36047V14.0349C17 15.2209 16.0116 17 13.8372 17H3.95349C1.77907 17 0 15.4186 0 13.2442ZM8.50003 5.54189C6.8663 5.54189 5.54189 6.8663 5.54189 8.50003C5.54189 10.1338 6.8663 11.4582 8.50003 11.4582C10.1338 11.4582 11.4582 10.1338 11.4582 8.50003C11.4582 6.8663 10.1338 5.54189 8.50003 5.54189ZM4.34189 8.50003C4.34189 6.20356 6.20356 4.34189 8.50003 4.34189C10.7965 4.34189 12.6582 6.20356 12.6582 8.50003C12.6582 10.7965 10.7965 12.6582 8.50003 12.6582C6.20356 12.6582 4.34189 10.7965 4.34189 8.50003ZM13.0466 4.5465C13.5924 4.5465 14.035 4.10399 14.035 3.55813C14.035 3.01226 13.5924 2.56976 13.0466 2.56976C12.5007 2.56976 12.0582 3.01226 12.0582 3.55813C12.0582 4.10399 12.5007 4.5465 13.0466 4.5465Z" fill="#C4C4C4">
-                  </svg>
+                  <img src="./images/svg/instagram.svg" alt="instagram link icon">
                 </a>
               </li>
             </ul>
