normalized, small fixes

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
 
     </main>
     <footer class="footer">
-      <div class="footer__container">
+      <div class="container footer__container">
         <div class="footer__row">
           <div class="footer__col">
             <h4 class="footer__title text-title text-title--small">Контакти</h4>
@@ -340,7 +340,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer__base-info">
+        <div class="footer__bottom">
           <span>© 2010 — 2021</span>
           <a class="footer__link" href="#">Privacy — Terms</a>
         </div>
