language selector added

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,17 @@
           <div class="sandwich">
             <div class="sandwich__button"></div>
           </div>
-          <div class="header__lang">UA</div>
+          <div class="header__lang select">
+            <div class="select__lang">UA</div>
+            <img class="select__icon"
+                 src="./images/svg/arrow.svg"
+                 alt="arrow icon"
+            >
+            <ul class="select__lang-list">
+              <li class="select__lang-list-item select--ua">UA</li>
+              <li class="select__lang-list-item select--en">EN</li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -277,8 +287,8 @@
           </div>
         </div>
       </section>
-
     </main>
+
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__row">
