--- a/src/index.html
+++ b/src/index.html
@@ -106,18 +106,18 @@
               <div class="decoration"></div>
             </div>
             <div class="exhibition__col">
-              <div class="info-block info-block--exhibition">
-                <div class="info-block__note info-block__note--exception text-main text-main--red">
+              <article class="article article--exhibition">
+                <span class="article__note article__note--exception text-main text-main--red">
                   11.07 - 22.09
-                </div>
-                <div class="info-block__title text-title text-title--small">
+                </span>
+                <h4 class="article__title text-title text-title--small">
                   Кураторська виставка “Ангели”
-                </div>
-                <div class="info-block__description text-description">
+                </h4>
+                <p class="article__description text-description">
                   Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...
-                </div>
+                </p>
                 <a href="#" class="button">Купити квиток</a>
-              </div>
+              </article>
             </div>
           </div>
           <img class="exhibition__img exhibition__img--second"
@@ -125,18 +125,18 @@
                alt="">
           <div class="exhibition__block">
             <div class="exhibition__col">
-              <div class="info-block info-block--exhibition info-block--middle">
-                <div class="info-block__note text-main text-main--red">
+              <article class="article article--exhibition article--middle">
+                <span class="article__note text-main text-main--red">
                   Діє постійно
-                </div>
-                <div class="info-block__title text-title text-title--small">
+                </span>
+                <h4 class="article__title text-title text-title--small">
                   Мистецтво ХХ ст. — XXI ст.
-                </div>
-                <div class="info-block__description text-description">
+                </h4>
+                <p class="article__description text-description">
                   Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.
-                </div>
+                </p>
                 <a href="#" class="button">Купити квиток</a>
-              </div>
+              </article>
             </div>
             <div class="exhibition__col">
               <div class="decoration">
@@ -154,18 +154,18 @@
               </div>
             </div>
             <div class="exhibition__col">
-              <div class="info-block info-block--exhibition">
-                <div class="info-block__note text-main text-main--red">
+              <article class="article article--exhibition">
+                <span class="article__note text-main text-main--red">
                   Діє постійно
-                </div>
-                <div class="info-block__title text-title text-title--small">
+                </span>
+                <h4 class="article__title text-title text-title--small">
                   Стародавнє мистецтво
-                </div>
-                <div class="info-block__description text-description">
+                </h4>
+                <p class="article__description text-description">
                   Визначні приклади стародавнього українського іконопису та живопису
-                </div>
+                </p>
                 <a href="#" class="button">Купити квиток</a>
-              </div>
+              </article>
             </div>
           </div>
           <a href="#" class="section-button">Архів виставок</a>
@@ -181,18 +181,18 @@
                 <div class="events__date">14.08</div>
                 <div class="events__time">13:00</div>
               </div>
-              <div class="info-block info-block--events">
-                <div class="info-block__note text-main text-main--events">
+              <article class="article article--events">
+                <span class="article__note text-main text-main--events">
                   Екскурсія
-                </div>
-                <div class="info-block__title text-title text-title--small">
+                </span>
+                <h4 class="article__title text-title text-title--small">
                   Кураторські екскурсії від Павла Гудімова
-                </div>
-                <div class="info-block__description text-description">
+                </h4>
+                <p class="article__description text-description">
                   Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...
-                </div>
+                </p>
                 <a href="#" class="button">Зареєструватись</a>
-              </div>
+              </article>
             </div>
             <img class="events__image"
                  src="images/content/events-1.jpg"
@@ -207,18 +207,18 @@
                 <div class="events__date">18.08</div>
                 <div class="events__time">14:00</div>
               </div>
-              <div class="info-block info-block--events">
-                <div class="info-block__note text-main text-main--events">
+              <article class="article article--events">
+                <span class="article__note text-main text-main--events">
                   Майстер-клас
-                </div>
-                <div class="info-block__title text-title text-title--small">
+                </span>
+                <h4 class="article__title text-title text-title--small">
                   Подорож до Австралії
-                </div>
-                <div class="info-block__description text-description">
+                </h4>
+                <p class="article__description text-description">
                   Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.
-                </div>
+                </p>
                 <a href="#" class="button">Зареєструватись</a>
-              </div>
+              </article>
 
             </div>
           </div>
@@ -242,34 +242,34 @@
           <h3 class="news__header text-title">Новини</h3>
           <div class="news__items">
             <div class="news__item">
-              <img src="images/content/news-1.jpg"
-                   alt=""
-                   class="news__image">
-              <div class="info-block">
-                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
-                <div class="info-block__title text-title text-title--smaller">Оголошення переможця</div>
-                <div class="info-block__description text-main text-main--gray">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</div>
-              </div>
+              <article class="article">
+                <img src="images/content/news-1.jpg"
+                     alt=""
+                     class="article__image">
+                <span class="article__note text-main text-main--events">9 серпня 2019</span>
+                <h4 class="article__title text-title text-title--smaller">Оголошення переможця</h4>
+                <p class="article__description text-main text-main--gray">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
+              </article>
             </div>
             <div class="news__item">
-              <img src="images/content/news-2.jpg"
-                   alt=""
-                   class="news__image">
-              <div class="info-block">
-                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
-                <div class="info-block__title text-title text-title--smaller">Міжнародний день котів</div>
-                <div class="info-block__description text-main text-main--gray">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</div>
-              </div>
+              <article class="article">
+                <img src="images/content/news-2.jpg"
+                     alt=""
+                     class="article__image">
+                <span class="article__note text-main text-main--events">9 серпня 2019</span>
+                <h4 class="article__title text-title text-title--smaller">Міжнародний день котів</h4>
+                <p class="article__description text-main text-main--gray">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
+              </article>
             </div>
             <div class="news__item">
-              <img src="images/content/news-3.jpg"
-                   alt=""
-                   class="news__image">
-              <div class="info-block">
-                <div class="info-block__note text-main text-main--events">9 серпня 2019</div>
-                <div class="info-block__title text-title text-title--smaller">200 років П. Кулішу</div>
-                <div class="info-block__description text-main text-main--gray">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</div>
-              </div>
+              <article class="article">
+                <img src="images/content/news-3.jpg"
+                     alt=""
+                     class="article__image">
+                <span class="article__note text-main text-main--events">9 серпня 2019</span>
+                <h4 class="article__title text-title text-title--smaller">200 років П. Кулішу</h4>
+                <p class="article__description text-main text-main--gray">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
+              </article>
             </div>
           </div>
           <a href="#" class="section-button">Усі новини</a>
