--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="container header__container">
         <a href="#" class="header__logo">
-          <img src="./images/svg/logo.svg" alt="logo link image">
+          <img src="./images/svg/logo.svg" alt="logo link image namu">
         </a>
         <div class="header__tools">
           <div class="sandwich">
@@ -37,7 +37,7 @@
             <div class="select__lang">UA</div>
             <img class="select__icon"
                  src="./images/svg/arrow.svg"
-                 alt="arrow icon"
+                 alt="arrow bottom icon"
             >
             <ul class="select__lang-list">
               <li class="select__lang-list-item select--ua">UA</li>
@@ -100,7 +100,7 @@
           <h3 class="exhibition__header text-title">Актуальні виставки</h3>
           <img class="exhibition__img exhibition__img--first"
                src="images/content/exhibition-1.png"
-               alt="">
+               alt="artifact image">
           <div class="exhibition__block">
             <div class="exhibition__col">
               <div class="decoration"></div>
@@ -122,7 +122,7 @@
           </div>
           <img class="exhibition__img exhibition__img--second"
                src="images/content/exhibition-2.png"
-               alt="">
+               alt="Life Triptych Love image">
           <div class="exhibition__block">
             <div class="exhibition__col">
               <article class="article article--exhibition article--middle">
@@ -150,7 +150,7 @@
                 <div class="decoration__text decoration__text--second"></div>
                 <img class="exhibition__img exhibition__img--third"
                      src="images/content/exhibition-3.png"
-                     alt="">
+                     alt="Cossack Mamay image">
               </div>
             </div>
             <div class="exhibition__col">
@@ -196,12 +196,12 @@
             </div>
             <img class="events__image"
                  src="images/content/events-1.jpg"
-                 alt="">
+                 alt="event image">
           </div>
           <div class="events__item">
             <img class="events__image"
                  src="images/content/events-2.jpg"
-                 alt="">
+                 alt="event image">
             <div class="events__wrapper">
               <div class="events__datetime">
                 <div class="events__date">18.08</div>
@@ -244,7 +244,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-1.jpg"
-                     alt=""
+                     alt="winners image"
                      class="article__image">
                 <span class="article__note text-main text-main--events">9 серпня 2019</span>
                 <h4 class="article__title text-title text-title--smaller">Оголошення переможця</h4>
@@ -254,7 +254,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-2.jpg"
-                     alt=""
+                     alt="cat image"
                      class="article__image">
                 <span class="article__note text-main text-main--events">9 серпня 2019</span>
                 <h4 class="article__title text-title text-title--smaller">Міжнародний день котів</h4>
@@ -264,7 +264,7 @@
             <div class="news__item">
               <article class="article">
                 <img src="images/content/news-3.jpg"
-                     alt=""
+                     alt="cossacks picture"
                      class="article__image">
                 <span class="article__note text-main text-main--events">9 серпня 2019</span>
                 <h4 class="article__title text-title text-title--smaller">200 років П. Кулішу</h4>
@@ -306,22 +306,30 @@
             </ul>
             <ul class="footer__media">
               <li>
-                <a href="#">
+                <a href="https://facebook.com"
+                   target="_blank"
+                   rel="noopener">
                   <img src="./images/svg/facebook.svg" alt="facebook link icon">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://twitter.com"
+                   target="_blank"
+                   rel="noopener">
                   <img src="./images/svg/twitter.svg" alt="twitter link icon">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://telegram.org/"
+                   target="_blank"
+                   rel="noopener">
                   <img src="./images/svg/telegram.svg" alt="telegram link icon">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://instagram.com"
+                   target="_blank"
+                   rel="noopener">
                   <img src="./images/svg/instagram.svg" alt="instagram link icon">
                 </a>
               </li>
